- bootloader-config:
  o do not drop "lock" in chainload entries from grub's menu.lst (#36398)

Version 10.6.9 - 25 January 2008

- harddrake:
  o class more sensors as biometric
- drakbug:
  o do not display twice "Cannot be run in console mode." message
- finish-install:
  o do ask again language (got wrongly disabled in 10.6.8)
- harddrake service:
  o backup xorg.conf before falling back to safe driver (#37182)

Version 10.6.8 - 24 January 2008

- bootloader-config, diskdrake:
  o look for LVM PV on non partitioned disk before looking for DOS
    partition_table (esp. for lilo which puts the DOS magic)
- drakbug:
  o make "Please describe what you were doing when it crashed" more
    visible and force people to write something in before opening
    bugzilla
- mygtk2: make sure users of ::no_ugtk_init (eg: drakbug) do catch
  exceptions in callbacks

Version 10.6.6 - 22 January 2008

- bootloader-config:
  o fix root=xxx parameter for "/" on lvm using UUID= in fstab (#36542)
- adapt to perl 5.10.0

Version 10.6.5 - 14 January 2008

- drakboot:
  o fix handling root=UUID=xxx when modifying a bootloader entry (#36788)

Version 10.6.4 - 14 January 2008

- localedrake, drakx-finish-install:
  o fix proposing Belgium when lang is "nl" and locales-fr is not installed
    (same for Canada with lang "fr" and locales-en not installed) (#36413)

Version 10.6.3 - 9 January 2008, by Thierry Vignaud

- handle new drivers: atl2 (ethernet), snd-virtuoso
- bootloader-config:
  o fix regression introduced in 10.5.7: do not create alt_xxx entries when
    adding a new entry in bootloader
- harddrake:
  o allow to set zero values in module options (#26515)
  o make "Run config tool" available again (#34794)
  o mark the service as interactive, so that package requests are
    displayed with parallell init
  o check that media are not USB keys before auto-configuring them (#34568)
- drakupdate_fstab:
  o never set "sync" option, use default fs options from drakx (#35204)