@@ -31,6 +31,7 @@ struct part {
   int size              # in sectors
   int pt_type           # 0x82, 0x83, 0x6 ...
   string fs_type        # 'ext2', 'nfs', ...
+  string type_name      # 'Linux RAID', 'Linux Logical Volume Manager', ...
 
   int part_number       # 1 for hda1...
   string device         # 'hda5', 'sdc1' ...
