@@ -24,10 +24,9 @@ sub _parts {
 sub read_primary {
     my ($hd) = @_;
 
-    my $wanted = fs::type::type_name2subpart('Linux Logical Volume Manager');
     my $type = fs::type::type_subpart_from_magic($hd);
 
-    $type && $type->{pt_type} == $wanted->{pt_type} or return;
+    $type && $type->{type_name} eq 'Linux Logical Volume Manager' or return;
 
     partition_table::lvm->initialize($hd);
     1;
