@@ -1,3 +1,5 @@
+- detect raid partitions based on either type 0xfd or vol_id detecting
+  linux_raid_member (#35684)
 - bootloader-config:
   o do not drop "lock" in chainload entries from grub's menu.lst (#36398)
 
